feat: migrate to java 17
changes:
- update maven-compiler-plugin to latest 3.14.1
- update maven-javadoc-plugin to latest 3.12.0
- update jacoco-maven-plugin to latest 0.8.14
- set maven.compiler.release to 17
- set source to 17 and update link to javadoc for maven-javadoc-plugin configuration
- set java-version to 17 in github workflows
- set java version to 17 in swagger-gradle-plugin
- replace String.format with "str".formatted
- replace casts with pattern variables
- add @Serial to serialVersionUID fields
- replace regular string literals with text blocks in tests
- replace Paths.get with Path.of
- replace new Integer with Integer.valueOf