@@ -28,8 +28,8 @@ public class EncodingStyleEnumDeserializer extends JsonDeserializer<Encoding.Sty
                 .filter(i -> i.toString().equals(value))
                 .findFirst()
                 .orElseThrow(() -> new RuntimeException(
-                        String.format("Can not deserialize value of type Encoding.StyleEnum from String \"%s\": value not one of declared Enum instance names: %s",
-                                value,
-                                Arrays.stream(Encoding.StyleEnum.values()).map(Encoding.StyleEnum::toString).collect(Collectors.joining(", ", "[", "]")))));
+                "Can not deserialize value of type Encoding.StyleEnum from String \"%s\": value not one of declared Enum instance names: %s".formatted(
+                        value,
+                        Arrays.stream(Encoding.StyleEnum.values()).map(Encoding.StyleEnum::toString).collect(Collectors.joining(", ", "[", "]")))));
     }
 }
