@@ -28,8 +28,8 @@ public class HeaderStyleEnumDeserializer extends JsonDeserializer<Header.StyleEn
                 .filter(i -> i.toString().equals(value))
                 .findFirst()
                 .orElseThrow(() -> new RuntimeException(
-                        String.format("Can not deserialize value of type Header.StyleEnum from String \"%s\": value not one of declared Enum instance names: %s",
-                                value,
-                                Arrays.stream(Header.StyleEnum.values()).map(Header.StyleEnum::toString).collect(Collectors.joining(", ", "[", "]")))));
+                "Can not deserialize value of type Header.StyleEnum from String \"%s\": value not one of declared Enum instance names: %s".formatted(
+                        value,
+                        Arrays.stream(Header.StyleEnum.values()).map(Header.StyleEnum::toString).collect(Collectors.joining(", ", "[", "]")))));
     }
 }
