@@ -10,7 +10,8 @@ import static org.testng.Assert.assertNotNull;
 import org.testng.annotations.Test;
 
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
+
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.JsonNode;
 
@@ -21,7 +22,7 @@ public class ArrayOfSubclassTest {
     public void extractSubclassArray_oas31() throws Exception {
         ResolvedSchema schema = ModelConverters.getInstance(true).readAllAsResolvedSchema(ModelWithArrayOfSubclasses.Holder.class);
         assertNotNull(schema);
-        String expectedJson = new String(Files.readAllBytes(Paths.get("src/test/java/io/swagger/v3/core/converting/ArrayOfSubclassTest_expected31.json")));
+        String expectedJson = new String(Files.readAllBytes(Path.of("src/test/java/io/swagger/v3/core/converting/ArrayOfSubclassTest_expected31.json")));
         String actualJson = Json31.pretty(schema);
         ObjectMapper mapper = new ObjectMapper();
         JsonNode expectedNode = mapper.readTree(expectedJson);
@@ -33,7 +34,7 @@ public class ArrayOfSubclassTest {
     public void extractSubclassArray_oas30() throws Exception {
         ResolvedSchema schema = ModelConverters.getInstance(false).readAllAsResolvedSchema(ModelWithArrayOfSubclasses.Holder.class);
         assertNotNull(schema);
-        String expectedJson = new String(Files.readAllBytes(Paths.get("src/test/java/io/swagger/v3/core/converting/ArrayOfSubclassTest_expected30.json")));
+        String expectedJson = new String(Files.readAllBytes(Path.of("src/test/java/io/swagger/v3/core/converting/ArrayOfSubclassTest_expected30.json")));
         String actualJson = Json31.pretty(schema);
         ObjectMapper mapper = new ObjectMapper();
         JsonNode expectedNode = mapper.readTree(expectedJson);
