@@ -5,7 +5,7 @@ import io.swagger.v3.oas.annotations.media.Schema;
 public class Car {
     @Schema(accessMode = Schema.AccessMode.READ_ONLY)
     public Integer getWheelCount() {
-        return new Integer(4);
+        return Integer.valueOf(4);
     }
 
     public void setWheelCount(Integer wheelCount) {
