@@ -43,29 +43,31 @@ public class ModelSerializerTest {
         props.put("dateTimeValue", new DateTimeSchema());
         pet.setProperties(props);
         pet.setRequired(Arrays.asList("intValue", "name"));
-        final String json = "{\n" +
-                "   \"required\":[\n" +
-                "      \"intValue\"\n" +
-                "   ],\n" +
-                "   \"properties\":{\n" +
-                "      \"intValue\":{\n" +
-                "         \"type\":\"integer\",\n" +
-                "         \"format\":\"int32\"\n" +
-                "      },\n" +
-                "      \"longValue\":{\n" +
-                "         \"type\":\"integer\",\n" +
-                "         \"format\":\"int64\"\n" +
-                "      },\n" +
-                "      \"dateValue\":{\n" +
-                "         \"type\":\"string\",\n" +
-                "         \"format\":\"date\"\n" +
-                "      },\n" +
-                "      \"dateTimeValue\":{\n" +
-                "         \"type\":\"string\",\n" +
-                "         \"format\":\"date-time\"\n" +
-                "      }\n" +
-                "   }\n" +
-                "}";
+        final String json = """
+                {
+                   "required":[
+                      "intValue"
+                   ],
+                   "properties":{
+                      "intValue":{
+                         "type":"integer",
+                         "format":"int32"
+                      },
+                      "longValue":{
+                         "type":"integer",
+                         "format":"int64"
+                      },
+                      "dateValue":{
+                         "type":"string",
+                         "format":"date"
+                      },
+                      "dateTimeValue":{
+                         "type":"string",
+                         "format":"date-time"
+                      }
+                   }
+                }\
+                """;
 
         SerializationMatchers.assertEqualsToJson(pet, json);
     }
@@ -73,34 +75,36 @@ public class ModelSerializerTest {
     @Test(description = "it should deserialize a model")
     public void deserializeModel() throws IOException {
         final String json =
-                "{\n" +
-                        "   \"required\":[\n" +
-                        "      \"intValue\"\n" +
-                        "   ],\n" +
-                        "   \"type\":\"object\",\n" +
-                        "   \"properties\":{\n" +
-                        "      \"dateValue\":{\n" +
-                        "         \"type\":\"string\",\n" +
-                        "         \"format\":\"date\"\n" +
-                        "      },\n" +
-                        "      \"longValue\":{\n" +
-                        "         \"type\":\"integer\",\n" +
-                        "         \"format\":\"int64\"\n" +
-                        "      },\n" +
-                        "      \"dateTimeValue\":{\n" +
-                        "         \"type\":\"string\",\n" +
-                        "         \"format\":\"date-time\"\n" +
-                        "      },\n" +
-                        "      \"intValue\":{\n" +
-                        "         \"type\":\"integer\",\n" +
-                        "         \"format\":\"int32\"\n" +
-                        "      },\n" +
-                        "      \"byteArrayValue\":{\n" +
-                        "         \"type\":\"string\",\n" +
-                        "         \"format\":\"binary\"\n" +
-                        "      }\n" +
-                        "   }\n" +
-                        "}";
+                """
+                {
+                   "required":[
+                      "intValue"
+                   ],
+                   "type":"object",
+                   "properties":{
+                      "dateValue":{
+                         "type":"string",
+                         "format":"date"
+                      },
+                      "longValue":{
+                         "type":"integer",
+                         "format":"int64"
+                      },
+                      "dateTimeValue":{
+                         "type":"string",
+                         "format":"date-time"
+                      },
+                      "intValue":{
+                         "type":"integer",
+                         "format":"int32"
+                      },
+                      "byteArrayValue":{
+                         "type":"string",
+                         "format":"binary"
+                      }
+                   }
+                }\
+                """;
 
         final Schema p = m.readValue(json, Schema.class);
         SerializationMatchers.assertEqualsToJson(p, json);
@@ -135,64 +139,70 @@ public class ModelSerializerTest {
     public void makeFieldReadOnly() throws IOException {
         final Map<String, Schema> schemas = ModelConverters.getInstance().read(Car.class);
         final String json =
-                "{\n" +
-                        "   \"Car\":{\n" +
-                        "      \"type\":\"object\",\n" +
-                        "      \"properties\":{\n" +
-                        "         \"wheelCount\":{\n" +
-                        "            \"type\":\"integer\",\n" +
-                        "            \"format\":\"int32\",\n" +
-                        "            \"readOnly\":true\n" +
-                        "         }\n" +
-                        "      }\n" +
-                        "   }\n" +
-                        "}";
+                """
+                {
+                   "Car":{
+                      "type":"object",
+                      "properties":{
+                         "wheelCount":{
+                            "type":"integer",
+                            "format":"int32",
+                            "readOnly":true
+                         }
+                      }
+                   }
+                }\
+                """;
         SerializationMatchers.assertEqualsToJson(schemas, json);
     }
 
     @Test(description = "it should serialize a model with a Set")
     public void serializeModelWithSet() throws IOException {
         final Map<String, Schema> schemas = ModelConverters.getInstance().read(Manufacturers.class);
-        final String json = "{\n" +
-                "   \"Manufacturers\":{\n" +
-                "      \"type\":\"object\",\n" +
-                "      \"properties\":{\n" +
-                "         \"countries\":{\n" +
-                "            \"type\":\"array\",\n" +
-                "            \"uniqueItems\":true,\n" +
-                "            \"items\":{\n" +
-                "               \"type\":\"string\"\n" +
-                "            }\n" +
-                "         }\n" +
-                "      }\n" +
-                "   }\n" +
-                "}";
+        final String json = """
+                {
+                   "Manufacturers":{
+                      "type":"object",
+                      "properties":{
+                         "countries":{
+                            "type":"array",
+                            "uniqueItems":true,
+                            "items":{
+                               "type":"string"
+                            }
+                         }
+                      }
+                   }
+                }\
+                """;
         SerializationMatchers.assertEqualsToJson(schemas, json);
     }
 
     @Test(description = "it should deserialize a model with object example")
     public void deserializeModelWithObjectExample() throws IOException {
-        final String json = "{\n" +
-                "   \"title\":\"Error\",\n" +
-                "   \"type\":\"object\",\n" +
-                "   \"properties\":{\n" +
-                "      \"code\":{\n" +
-                "         \"type\":\"integer\",\n" +
-                "         \"format\":\"int32\"\n" +
-                "      },\n" +
-                "      \"message\":{\n" +
-                "         \"type\":\"string\"\n" +
-                "      },\n" +
-                "      \"fields\":{\n" +
-                "         \"type\":\"string\"\n" +
-                "      }\n" +
-                "   },\n" +
-                "   \"example\":{\n" +
-                "      \"code\":1,\n" +
-                "      \"message\":\"hello\",\n" +
-                "      \"fields\":\"abc\"\n" +
-                "   }\n" +
-                "}";
+        final String json = """
+                {
+                   "title":"Error",
+                   "type":"object",
+                   "properties":{
+                      "code":{
+                         "type":"integer",
+                         "format":"int32"
+                      },
+                      "message":{
+                         "type":"string"
+                      },
+                      "fields":{
+                         "type":"string"
+                      }
+                   },
+                   "example":{
+                      "code":1,
+                      "message":"hello",
+                      "fields":"abc"
+                   }
+                }\
+                """;
 
         final Schema model = Json.mapper().readValue(json, Schema.class);
         assertEquals(Json.mapper().writeValueAsString(model.getExample()), "{\"code\":1,\"message\":\"hello\",\"fields\":\"abc\"}");
@@ -200,15 +210,17 @@ public class ModelSerializerTest {
 
     @Test(description = "it should deserialize a model with read-only property")
     public void deserializeModelWithReadOnlyProperty() throws IOException {
-        final String json = "{\n" +
-                "   \"properties\":{\n" +
-                "      \"id\":{\n" +
-                "         \"type\":\"integer\",\n" +
-                "         \"format\":\"int32\",\n" +
-                "         \"readOnly\":true\n" +
-                "      }\n" +
-                "   }\n" +
-                "}";
+        final String json = """
+                {
+                   "properties":{
+                      "id":{
+                         "type":"integer",
+                         "format":"int32",
+                         "readOnly":true
+                      }
+                   }
+                }\
+                """;
         final Schema model = Json.mapper().readValue(json, Schema.class);
         Schema property = (Schema) model.getProperties().get("id");
         assertTrue(property.getReadOnly());
@@ -229,39 +241,43 @@ public class ModelSerializerTest {
 
     @Test(description = "it should generate an integer field with enum")
     public void integerEnumGeneration() throws IOException {
-        final String json = "{\n" +
-                "   \"properties\":{\n" +
-                "      \"id\":{\n" +
-                "         \"description\":\"fun!\",\n" +
-                "         \"type\":\"integer\",\n" +
-                "         \"format\":\"int32\",\n" +
-                "         \"readOnly\":true,\n" +
-                "         \"enum\": [ 0, 1]\n" +
-                "      }\n" +
-                "   }\n" +
-                "}";
+        final String json = """
+                {
+                   "properties":{
+                      "id":{
+                         "description":"fun!",
+                         "type":"integer",
+                         "format":"int32",
+                         "readOnly":true,
+                         "enum": [ 0, 1]
+                      }
+                   }
+                }\
+                """;
         final Schema model = Json.mapper().readValue(json, Schema.class);
         IntegerSchema p = (IntegerSchema) model.getProperties().get("id");
 
         assertNotNull(p.getEnum());
-        assertEquals(p.getEnum().get(0), new Integer(0));
-        assertEquals(p.getEnum().get(1), new Integer(1));
+        assertEquals(p.getEnum().get(0), Integer.valueOf(0));
+        assertEquals(p.getEnum().get(1), Integer.valueOf(1));
     }
 
     @Test(description = "it retains enums per ")
     public void testEnumParser() throws IOException {
-        String json = "{\n" +
-                "  \"properties\": {\n" +
-                "    \"AdvStateType\": {\n" +
-                "      \"description\": \"Advertising State\",\n" +
-                "      \"enum\": [\n" +
-                "        \"off\",\n" +
-                "        \"on\"\n" +
-                "      ],\n" +
-                "      \"type\": \"string\"\n" +
-                "    }\n" +
-                "  }\n" +
-                "}";
+        String json = """
+                {
+                  "properties": {
+                    "AdvStateType": {
+                      "description": "Advertising State",
+                      "enum": [
+                        "off",
+                        "on"
+                      ],
+                      "type": "string"
+                    }
+                  }
+                }\
+                """;
         final Schema model = Json.mapper().readValue(json, Schema.class);
         StringSchema p = (StringSchema) model.getProperties().get("AdvStateType");
 
@@ -272,14 +288,16 @@ public class ModelSerializerTest {
 
     @Test
     public void testPrimitiveModel() throws Exception {
-        String json = "{\n" +
-                "  \"type\": \"string\",\n" +
-                "  \"enum\": [\n" +
-                "    \"a\",\n" +
-                "    \"b\",\n" +
-                "    \"c\"\n" +
-                "  ]\n" +
-                "}";
+        String json = """
+                {
+                  "type": "string",
+                  "enum": [
+                    "a",
+                    "b",
+                    "c"
+                  ]
+                }\
+                """;
 
         final Schema model = Json.mapper().readValue(json, Schema.class);
 
@@ -289,12 +307,14 @@ public class ModelSerializerTest {
 
     @Test
     public void testIssue1852() throws Exception {
-        String json = "{\n" +
-                "  \"type\": \"integer\",\n" +
-                "  \"minimum\": 10,\n" +
-                "  \"maximum\": 20,\n" +
-                "  \"default\": 15\n" +
-                "}";
+        String json = """
+                {
+                  "type": "integer",
+                  "minimum": 10,
+                  "maximum": 20,
+                  "default": 15
+                }\
+                """;
 
         final Schema model = Json.mapper().readValue(json, Schema.class);
 
@@ -306,10 +326,12 @@ public class ModelSerializerTest {
     @Test
     public void testIssue2064Neg() throws Exception {
         String json =
-                "{\n" +
-                        "  \"type\": \"string\",\n" +
-                        "  \"uniqueItems\": false\n" +
-                        "}";
+                """
+                {
+                  "type": "string",
+                  "uniqueItems": false
+                }\
+                """;
 
         final Schema model = Json.mapper().readValue(json, Schema.class);
 
@@ -319,10 +341,12 @@ public class ModelSerializerTest {
     @Test
     public void testIssue2064() throws Exception {
         String json =
-                "{\n" +
-                        "  \"type\": \"string\",\n" +
-                        "  \"uniqueItems\": true\n" +
-                        "}";
+                """
+                {
+                  "type": "string",
+                  "uniqueItems": true
+                }\
+                """;
 
         final Schema model = Json.mapper().readValue(json, Schema.class);
 
@@ -332,16 +356,18 @@ public class ModelSerializerTest {
     @Test
     public void testIssue2064Ip() throws Exception {
         String json =
-                "{\n" +
-                        "  \"type\": \"object\",\n" +
-                        "  \"properties\": {\n" +
-                        "    \"id\": {\n" +
-                        "      \"type\": \"integer\",\n" +
-                        "      \"format\": \"int32\",\n" +
-                        "      \"multipleOf\": 3.0\n" +
-                        "    }\n" +
-                        "  }\n" +
-                        "}";
+                """
+                {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "integer",
+                      "format": "int32",
+                      "multipleOf": 3.0
+                    }
+                  }
+                }\
+                """;
 
         final Schema model = Json.mapper().readValue(json, Schema.class);
 
@@ -353,13 +379,15 @@ public class ModelSerializerTest {
     @Test
     public void testEnumWithNull() throws Exception {
         String yaml =
-                        "type: integer\n" +
-                        "description: some int values with null\n" +
-                        "format: int32\n" +
-                        "enum: \n" +
-                        "- 1\n" +
-                        "- 2\n" +
-                        "- null\n";
+                        """
+                        type: integer
+                        description: some int values with null
+                        format: int32
+                        enum:\s
+                        - 1
+                        - 2
+                        - null
+                        """;
 
         final Schema model = Yaml.mapper().readValue(yaml, Schema.class);
 
